--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
         <!-- SIDEBAR PREMIUM -->
         <aside class="w-64 bg-white shadow-xl p-6 flex flex-col border-r">
 
-            <h1 class="text-2xl font-bold text-blue-600 mb-6">📘 SITTA</h1>
+            <h1 class="text-2xl font-bold text-blue-600 mb-6">SITTA UT</h1>
 
             <nav class="space-y-2">
 
                 <button @click="tab='stok'" class="flex items-center gap-3 px-4 py-3 w-full rounded-xl transition 
                 hover:bg-blue-50" :class="tab==='stok' ? 'bg-blue-600 text-white shadow' : 'text-gray-700'">
-                    📦 <span>Stok</span>
+                     <span>Stok</span>
                 </button>
 
                 <button @click="tab='tracking'" class="flex items-center gap-3 px-4 py-3 w-full rounded-xl transition 
-                hover:bg-green-50" :class="tab==='tracking' ? 'bg-green-600 text-white shadow' : 'text-gray-700'">
-                    🚚 <span>Tracking DO</span>
+                hover:bg-green-50" :class="tab==='tracking' ? 'bg-blue-600 text-white shadow' : 'text-gray-700'">
+                     <span>Tracking DO</span>
                 </button>
 
                 <button @click="tab='order'" class="flex items-center gap-3 px-4 py-3 w-full rounded-xl transition 
                 hover:bg-indigo-50" :class="tab==='order' ? 'bg-indigo-600 text-white shadow' : 'text-gray-700'">
-                    📝 <span>Pemesanan</span>
+                     <span>Pemesanan</span>
                 </button>
 
             </nav>
